--- a/pauper.html
+++ b/pauper.html
@@ -114,7 +114,7 @@
 					<!-- intro -->	
                   <div class="page-content" style="background-color: #F3E9E5;">
                         <div class="one_half " style="margin-top:30px">
-                          <p> Mildly Poisonous is my <strong>alter ego</strong>.
+                          <p> testo Poisonous is my <strong>alter ego</strong>.
 Born by the desire to enclose in a box all other kind of works I do that have a different dark soul, a place where I can put all my experimentations.</p>
                           <p>I’m really fascinated by the world of unreal and imaginative arts. For this reason I have chose to design a logo which was a tiny illustration rich of details, moving away from my geometric comfort zone.</p>
                           <p>I have think of <em>“Art addict anonymous”</em> as payoff because I’m keen on the idea to create a sort of "call for artists", inviting them to collaborate for creating something unique.</p>
