--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <link rel="stylesheet" type="text/css"  href='css/justifiedGallery.min.css' />
         <link rel="stylesheet" type="text/css"  href='css/prettyPhoto.css' />
         <link rel="stylesheet" type="text/css"  href='style.css' />
+		
+		<link rel="import"  href='analytics.html' />
 
         <!--[if lt IE 9]>
                 <script src="js/html5.js"></script>            
