--- a/curriculum.html
+++ b/curriculum.html
@@ -33,9 +33,8 @@
         <div class="site-wrapper">
 
             <div class="doc-loader"></div>       
-
- <!-- MENU A TENDINA -->
-     <div class="menu-wraper center-relative">                          
+   <!-- MENU A TENDINA -->
+   <div class="menu-wraper center-relative">                          
                 <div class="menu-holder">
                     <nav id="header-main-menu" class="big-menu">
                         <ul class="main-menu sm sm-clean">
@@ -43,7 +42,7 @@
                                 <a href="index.html" class="current">Home</a>
                             </li>    
                             <li>
-                                <a href="#">About me</a>
+                                <a href="about me.html">About me</a>
                             </li>   
 							   
 							<li>
@@ -72,7 +71,6 @@
                     </nav>
                 </div>
             </div>
-
 
 			
 <!-- TOP LOGO+ MENU -->			
