--- a/mildly.html
+++ b/mildly.html
@@ -34,8 +34,8 @@
             <div class="doc-loader"></div>       
 
 
- <!-- MENU A TENDINA -->
-    <div class="menu-wraper center-relative">                          
+   <!-- MENU A TENDINA -->
+   <div class="menu-wraper center-relative">                          
                 <div class="menu-holder">
                     <nav id="header-main-menu" class="big-menu">
                         <ul class="main-menu sm sm-clean">
@@ -43,7 +43,7 @@
                                 <a href="index.html" class="current">Home</a>
                             </li>    
                             <li>
-                                <a href="#">About me</a>
+                                <a href="about me.html">About me</a>
                             </li>   
 							   
 							<li>
