--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 
             <div class="doc-loader"></div>   
 	
- <!-- MENU A TENDINA -->
+   <!-- MENU A TENDINA -->
    <div class="menu-wraper center-relative">                          
                 <div class="menu-holder">
                     <nav id="header-main-menu" class="big-menu">
@@ -42,7 +42,7 @@
                                 <a href="index.html" class="current">Home</a>
                             </li>    
                             <li>
-                                <a href="#">About me</a>
+                                <a href="about me.html">About me</a>
                             </li>   
 							   
 							<li>
