--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                            <p> I consider my mind a laboratory of ideas: at the core of this creative universe, there is the desire to push myself beyond the boundaries  of the ordinary, breaking conventional patterns, and exploring new techniques.</p>
                             </div>
                             <p class="read-more-arrow">
-                              <a href="#">
+                              <a href="about me.html">
                                     <span class="fa fa-arrow-right" aria-hidden="true"></span>
                                 </a>
                             </p>
