--- a/dmtr.html
+++ b/dmtr.html
@@ -190,16 +190,16 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                          
-                            <a href="laperla.html" rel="prev">
-                            La Perla<br>Nail Studio</a>    
+                                      <div class="nav-previous">                                                  
+                            <a href="scacchi.html" rel="prev">Liceo <br> Scacchi
+                            </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                    <li><a href="laperla.html">Brand identity</a></li> 
+                                   <li><a href="scacchi.html">Offline Adv</a> </li>                        
                                 </ul>
-                            </div> 
-                      </div>
+                            </div>                             
+                        </div>
                         <div class="nav-next">                                                  
                             <a href="dali.html" rel="next">
                              Osteria<br>Dalì
