--- a/palazzo bellocchi.html
+++ b/palazzo bellocchi.html
@@ -346,12 +346,12 @@ Mildly<br>Poisonous </a>
                             </div> 
                       </div>
                         <div class="nav-next">                                                  
-                            <a href="#" rel="next">
+                            <a href="scacchi.html" rel="next">Liceo <br> Scacchi
                             </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="#">Brand identity</a></li>                        
+                                   <li><a href="scacchi.html">Offline Adv</a> </li>                        
                                 </ul>
                             </div>                             
                         </div>
