--- a/confindustria.html
+++ b/confindustria.html
@@ -169,25 +169,17 @@
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
                         <div class="nav-previous">                                                                          
-                            <a href="laperla.html" rel="prev">
-                            La Perla<br>Nail Studio</a>    
+                            <a href="dmtr.html" rel="prev">
+                           Dmtr<br>Consulting</a>    
                             <div class="clear"></div>
-                            <div class="cat-links">
+                           <div class="cat-links">
                                 <ul>
-                                    <li><a href="laperla.html">Brand identity</a></li> 
+                                   <li><a href="dmtr.html">Business PLAN</a></li> 
+									<li><a href="dmtr.html">PITCH DECK</a></li> 
                                 </ul>
                             </div> 
                       </div>
-                        <div class="nav-next">                                                  
-                            <a href="dali.html" rel="next">
-                             Osteria<br>Dalì
-                            </a>                     
-                            <div class="clear"></div>
-                            <div class="cat-links">
-                                <ul>
-                                   <li><a href="dali.html">Brand identity</a></li>                        
-                                </ul>
-                            </div>                             
+                        <div class="nav-next">                           
                         </div>
                         <div class="clear"></div>
                     </div>
