--- a/scacchi.html
+++ b/scacchi.html
@@ -139,23 +139,23 @@
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
                         <div class="nav-previous">                                                                          
-                            <a href="laperla.html" rel="prev">
-                            La Perla<br>Nail Studio</a>    
+                            <a href="bellocchi.html" rel="prev">
+                            Palazzo<br>Bellocchi</a>    
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                    <li><a href="laperla.html">Brand identity</a></li> 
+                                    <li><a href="bellocchi.html">Brand identity</a></li> 
                                 </ul>
                             </div> 
                       </div>
                         <div class="nav-next">                                                  
-                            <a href="dali.html" rel="next">
-                             Osteria<br>Dalì
-                            </a>                     
+                            <a href="confindustria.html" rel="next">
+                            Confindustria<br>Albania
+                          </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="dali.html">Brand identity</a></li>                        
+                                   <li><a href="confindustria.html">poster</a></li>
                                 </ul>
                             </div>                             
                         </div>
