--- a/dmtr.html
+++ b/dmtr.html
@@ -201,13 +201,13 @@
                             </div>                             
                         </div>
                         <div class="nav-next">                                                  
-                            <a href="dali.html" rel="next">
-                             Osteria<br>Dalì
-                            </a>                     
+                            <a href="confindustria.html" rel="next">
+                            Confindustria<br>Albania
+                          </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="dali.html">Brand identity</a></li>                        
+                                   <li><a href="confindustria.html">poster</a></li>
                                 </ul>
                             </div>                             
                         </div>
