--- a/scacchi.html
+++ b/scacchi.html
@@ -148,17 +148,17 @@
                                 </ul>
                             </div> 
                       </div>
-                        <div class="nav-next">                                                  
-                            <a href="confindustria.html" rel="next">
-                            Confindustria<br>Albania
-                          </a>                     
+                        <div class="nav-next">                                                                          
+                            <a href="dmtr.html" rel="next">
+                           Dmtr<br>Consulting</a>    
                             <div class="clear"></div>
-                            <div class="cat-links">
+                           <div class="cat-links">
                                 <ul>
-                                   <li><a href="confindustria.html">poster</a></li>
+                                   <li><a href="dmtr.html">Business PLAN</a></li> 
+									<li><a href="dmtr.html">PITCH DECK</a></li> 
                                 </ul>
-                            </div>                             
-                        </div>
+                            </div> 
+                      </div>
                         <div class="clear"></div>
                     </div>
                 </div>                          
