--- a/card.html
+++ b/card.html
@@ -192,7 +192,7 @@
                <img class="animate aligncenter" src="images/joker_logo.jpg" alt="playing cards illustration" />
                            
                         </div>       
-					<h1 style="font-family:Playfair display, serif; font-weight:300; font-size:66px; line-height: 42px;;color:#171D20; text-align: center;  ">The<em style="color:#AF313F">J</em>ooker </h1>
+					<h1 style="font-family:Playfair display, serif; font-weight:300; font-size:66px; line-height: 42px;;color:#171D20; text-align: center;  ">The<em style="color:#AF313F">J</em>oker </h1>
 					  <hr style="height:5px;width:10%; border-width:0;color:#AF313F;background-color:#AF313F" class="center-relative">
 		   
                 </div>
