correzioni img carte + correzione link in scacchi

--- a/scacchi.html
+++ b/scacchi.html
@@ -139,7 +139,7 @@
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
                         <div class="nav-previous">                                                                          
-                            <a href="bellocchi.html" rel="prev">
+                            <a href="palazzo bellocchi.html" rel="prev">
                             Palazzo<br>Bellocchi</a>    
                             <div class="clear"></div>
                             <div class="cat-links">
