--- a/cinzia spione.html
+++ b/cinzia spione.html
@@ -48,7 +48,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="#">Resume</a>
+                                <a href="work in progress.html">Resume</a>
                             </li>   
                            
 							<li>
