--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="#">Resume</a>
+                                <a href="work in progress.html">Resume</a>
                             </li>   
                            
 							<li>
