--- a/curriculum.html
+++ b/curriculum.html
@@ -46,7 +46,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="#">Resume</a>
+                                 <a href="work in progress.html">Resume</a>
                             </li>   
                            
 							<li>
