--- a/dmtr.html
+++ b/dmtr.html
@@ -47,7 +47,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="#">Resume</a>
+                               <a href="work in progress.html">Resume</a>
                             </li>   
                            
 							<li>
