--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="#">Resume</a>
+                                <a href="work in progress.html">Resume</a>
                             </li>   
                            
 							<li>
