--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         
                         <div class="clear"></div>
 						<div class="one">
-                          <p style="text-align: center; margin-top:30px">Don't be shy! I would be happy to provide you with more details and answer any questions you may have<br> I'm looking forward to hearing your opinion!</p>
+                          <p style="text-align: center; margin-top:30px">Don't be shy! I would be happy to provide you with more details and answer any questions you may have.<br> I'm looking forward to hearing your opinion!</p>
 							 <br> <a href="mailto:rellannac@gmail.com"  class="button">CONTACT ME</a>
                           </div>
                         <div class="clear"></div>
