--- a/portfolio.html
+++ b/portfolio.html
@@ -328,27 +328,14 @@
                     </h1>
                 </div>
 
-       <div class="page-content-wrapper center-relative content-1170">                
+       <div class="page-content-wrapper center-relative content-970">                
                     <div class="page-content">
-                        <div class="one_half ">
-                            <p style="text-align: left ">Phasellus sit amet scelerisque sapien. Aliquam erat volutpat. Nam ut lectus at velit dapibus sollicitudin eu.</p>
-                            <br>
-                            <p style="text-align: left ">Because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone and one.</p>
-                            <br>
-                            <p style="text-align: left ">
-                                <strong>Phone: </strong>+39 327 14 58 186 <br>
-                                <strong>Email: </strong>rellannac@gmail.com <br>
-                            </p>
-                        </div>
-                        <div class="one_half last">
-                            <div class="contact-form">
-                                <p><input id="name" type="text" name="your-name" placeholder="Name"></p>
-                                <p><input id="contact-email" type="email" name="your-email" placeholder="Email"></p>
-                                <p><input id="subject" type="text" name="your-subject" placeholder="Subject"></p>
-                                <p><textarea id="message" name="your-message" placeholder="Message"></textarea></p>
-                                <p class="contact-submit-holder"><input type="submit" value="SEND"></p>                                
-                            </div>                                    
-                        </div>
+                        
+                        <div class="clear"></div>
+						<div class="one">
+                          <p style="text-align: center; margin-top:30px">Don't be shy! I would be happy to provide you with more details and answer any questions you may have.<br> I'm looking forward to hearing your opinion!</p>
+							 <br> <a href="mailto:rellannac@gmail.com"  class="button">CONTACT ME</a>
+                          </div>
                         <div class="clear"></div>
                     </div>
                 </div>   
