--- a/confindustria.html
+++ b/confindustria.html
@@ -170,7 +170,7 @@
                     <div class="content-570 center-relative">
                         <div class="nav-previous">                                                                          
                             <a href="girl.html" rel="prev">
-                           Girls<br>Illustrations</a>    
+                           Girls</a>    
                             <div class="clear"></div>
                            <div class="cat-links">
                                 <ul>
@@ -179,7 +179,16 @@
                                 </ul>
                             </div> 
                       </div>
-                        <div class="nav-next">                           
+                          <div class="nav-next">                                                  
+                            <a href="pugliamood.html" rel="next">
+                            Pugliamood
+                            </a>                     
+                            <div class="clear"></div>
+                            <div class="cat-links">
+                                <ul>
+                                   <li><a href="pugliamood.html">flyer</a></li>                        
+                                </ul>
+                            </div>                             
                         </div>
                         <div class="clear"></div>
                     </div>
