--- a/curriculum.html
+++ b/curriculum.html
@@ -9,7 +9,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <link rel="shortcut icon" href="images/favicon.ico" />       
-        <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400i%7CLato:300,300i,400,400i,700,700i,900%7CMontserrat:900' rel='stylesheet' type='text/css'>		
+        <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400i%7CLato:300,300i,400,400i,700,700i,900%7CMontserrat:900' rel='stylesheet' type='text/css'>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+		
         <link rel="stylesheet" type="text/css"  href='css/clear.css' />
         <link rel="stylesheet" type="text/css"  href='css/common.css' />
         <link rel="stylesheet" type="text/css"  href='css/font-awesome.min.css' />
