--- a/mildly.html
+++ b/mildly.html
@@ -34,8 +34,7 @@
 
         <div class="single single-post">
 
-
-   <!-- MENU A TENDINA -->
+ <!-- MENU A TENDINA -->
    <div class="menu-wraper center-relative">                          
                 <div class="menu-holder">
                     <nav id="header-main-menu" class="big-menu">
@@ -55,25 +54,24 @@
                                 <a href="portfolio.html">Portfolio</a>
                                 <ul class="sub-menu ">
                                     <li>
-                                        <a href="#">Brand Identity</a>
+                                        <a href="portfolio_b.html">Brand Identity</a>
                                     </li>
                                     <li>
-                                        <a href="#">Illustration</a>
+                                        <a href="portfolio_i.html">Illustration</a>
                                     </li>
                                     <li>
-                                       <a href="#">Offline Graphics</a>
+                                       <a href="portfolio_g.html">Graphic Design</a>
                                     </li>
                                 </ul>
                             </li>                      
                                
                             <li>
-                                <a href="#">Let's work together</a>
+                                <a href="contact.html">Let's work together</a>
                             </li>                            
                         </ul>   
                     </nav>
                 </div>
             </div>
-
 
 			
 <!-- TOP LOGO+ MENU -->			
