--- a/scacchi.html
+++ b/scacchi.html
@@ -39,7 +39,7 @@
             <div class="doc-loader"></div>       
 
       
-    <!-- MENU A TENDINA -->
+  <!-- MENU A TENDINA -->
    <div class="menu-wraper center-relative">                          
                 <div class="menu-holder">
                     <nav id="header-main-menu" class="big-menu">
@@ -59,19 +59,19 @@
                                 <a href="portfolio.html">Portfolio</a>
                                 <ul class="sub-menu ">
                                     <li>
-                                        <a href="#">Brand Identity</a>
+                                        <a href="portfolio_b.html">Brand Identity</a>
                                     </li>
                                     <li>
-                                        <a href="#">Illustration</a>
+                                        <a href="portfolio_i.html">Illustration</a>
                                     </li>
                                     <li>
-                                       <a href="#">Offline Graphics</a>
+                                       <a href="portfolio_g.html">Graphic Design</a>
                                     </li>
                                 </ul>
                             </li>                      
                                
                             <li>
-                                <a href="#">Let's work together</a>
+                                <a href="contact.html">Let's work together</a>
                             </li>                            
                         </ul>   
                     </nav>
