modifica prev./next

--- a/confindustria.html
+++ b/confindustria.html
@@ -171,27 +171,18 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                          
-                            <a href="girl.html" rel="prev">
-                           Girls</a>    
-                            <div class="clear"></div>
-                           <div class="cat-links">
-                                <ul>
-                                   <li><a href="girl.html" >ILLUSTRATION</a></li> 
-									
-                                </ul>
-                            </div> 
-                      </div>
-                          <div class="nav-next">                                                  
-                            <a href="pugliamood.html" rel="next">
-                            Pugliamood
-                            </a>                     
+                      <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                   <li><a href="pugliamood.html">flyer</a></li>                        
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
-                            </div>                             
+                            </div>                  
+                      </div>
+                          <div class="nav-next">                                         
                         </div>
                         <div class="clear"></div>
                     </div>
