--- a/mildly.html
+++ b/mildly.html
@@ -271,28 +271,29 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                   
-                            <a href="dali.html" rel="prev">
-                             Osteria<br>Dalì
-                            </a>                     
+                        <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                   <li><a href="dali.html">Brand identity</a></li>                        
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
                             </div>                  
                       </div>
-                        <div class="nav-next">                                                  
-                            <a href="palazzo bellocchi.html" rel="next">
-                            Palazzo<br>Bellocchi
+                          <div class="nav-next">                                                  
+                            <a href="cinzia spione.html" rel="next">
+                             Cinzia<br>Spione
                             </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="palazzo bellocchi.html">Brand identity</a></li>                        
+                                   <li><a href="cinzia spione.html">Brand identity</a></li>                        
                                 </ul>
                             </div>                             
                         </div>
+						
                         <div class="clear"></div>
                     </div>
                 </div>                          
