--- a/card.html
+++ b/card.html
@@ -242,26 +242,25 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                   
-                            <a href="dmtr.html" rel="prev">
-                             Dmtr<br>Consulting
-                            </a>                     
+                         <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                   <li><a href="dmtr.html">BUSINESS PLAN</a></li> 
-									<li><a href="dmtr.html"> PITCH DECK</a></li> 
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
                             </div>                  
                       </div>
                         <div class="nav-next">                                                  
-                            <a href="confindustria.html" rel="next">
-                            Confindustria Albania
-                            </a>                     
+                            <a href="girl.html" rel="next">
+                           Girls</a>    
                             <div class="clear"></div>
-                            <div class="cat-links">
+                           <div class="cat-links">
                                 <ul>
-                                   <li><a href="confindustria.html">poster</a></li>                        
+                                   <li><a href="girl.html" >ILLUSTRATION</a></li> 
+									
                                 </ul>
                             </div>                             
                         </div>
