--- a/cinzia spione.html
+++ b/cinzia spione.html
@@ -303,15 +303,16 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                          
-                            <a href="laperla.html" rel="prev">
-                            La Perla<br>Nail Studio</a>    
+                        <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                    <li><a href="laperla.html">Brand identity</a></li> 
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
-                            </div> 
+                            </div>                  
                       </div>
                         <div class="nav-next">                                                  
                             <a href="dali.html" rel="next">
