--- a/dali.html
+++ b/dali.html
@@ -278,27 +278,29 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                          
-                            <a href="cinzia spione.html" rel="prev">
-                            Cinzia<br>Spione</a>    
+                         <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                    <li><a href="cinzia spione.html">Brand identity</a></li> 
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
-                            </div> 
+                            </div>                  
                       </div>
-                        <div class="nav-next">                                                  
-                            <a href="mildly.html" rel="next">
-                             Mildly<br>Poisonous
+                       <div class="nav-next">                                                  
+                            <a href="palazzo bellocchi.html" rel="next">
+                            Palazzo<br>Bellocchi
                             </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="mildly.html">Brand identity</a></li>                        
+                                   <li><a href="palazzo bellocchi.html">Brand identity</a></li>                        
                                 </ul>
                             </div>                             
                         </div>
+					
                         <div class="clear"></div>
                     </div>
                 </div>                          
