--- a/dmtr.html
+++ b/dmtr.html
@@ -193,8 +193,19 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                                      <div class="nav-previous">                                                  
-                            <a href="scacchi.html" rel="prev">Liceo <br> Scacchi
+                       <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
+                            <div class="clear"></div>
+                            <div class="cat-links">
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
+                                </ul>
+                            </div>                  
+                      </div>
+                      <div class="nav-next">                                                  
+                            <a href="scacchi.html" rel="next">Liceo <br> Scacchi
                             </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
@@ -203,17 +214,7 @@
                                 </ul>
                             </div>                             
                         </div>
-                        <div class="nav-next">                                                  
-                            <a href="confindustria.html" rel="next">
-                            Confindustria<br>Albania
-                          </a>                     
-                            <div class="clear"></div>
-                            <div class="cat-links">
-                                <ul>
-                                   <li><a href="confindustria.html">poster</a></li>
-                                </ul>
-                            </div>                             
-                        </div>
+						
                         <div class="clear"></div>
                     </div>
                 </div>                          
