--- a/essenza.html
+++ b/essenza.html
@@ -295,18 +295,29 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                   
+                         <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
+                            <div class="clear"></div>
+                            <div class="cat-links">
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
+                                </ul>
+                            </div>                  
                       </div>
                         <div class="nav-next">                                                  
-                            <a href="laperla.html" rel="next">
-                            La Perla<br>Nail Studio</a>          
+                            <a href="mildly.html" rel="next">
+                             Mildly<br>Poisonous
+                            </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="laperla.html">Brand identity</a></li>                     
+                                   <li><a href="mildly.html">Brand identity</a></li>                        
                                 </ul>
                             </div>                             
                         </div>
+					
                         <div class="clear"></div>
                     </div>
                 </div>                          
