--- a/laperla.html
+++ b/laperla.html
@@ -294,24 +294,25 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                          
-                            <a href="essenza.html" rel="prev">
-                           Essenza<br>Bistrot</a>    
+                        <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                    <li><a href="essenza.html">Brand identity</a></li> 
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
-                            </div> 
+                            </div>                  
                       </div>
                         <div class="nav-next">                                                  
-                            <a href="cinzia spione.html" rel="next">
-                             Cinzia<br>Spione
+                            <a href="work in progress.html" rel="next">
+                             Pauperformance
                             </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="cinzia spione.html">Brand identity</a></li>                        
+                                   <li><a href="work in progress.html">Brand identity</a></li>                        
                                 </ul>
                             </div>                             
                         </div>
