--- a/palazzo bellocchi.html
+++ b/palazzo bellocchi.html
@@ -339,26 +339,28 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                          
-                            <a href="mildly.html" rel="prev">
-Mildly<br>Poisonous </a>    
+                        <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                    <li><a href="mildly.html">Brand identity</a></li> 
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
-                            </div> 
+                            </div>                  
                       </div>
-                        <div class="nav-next">                                                  
-                            <a href="scacchi.html" rel="next">Liceo <br> Scacchi
-                            </a>                     
+                       	<div class="nav-next">                                                  
+                            <a href="laperla.html" rel="next">
+                            La Perla<br>Nail Studio</a>          
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="scacchi.html">Offline Adv</a> </li>                        
+                                   <li><a href="laperla.html">Brand identity</a></li>                     
                                 </ul>
                             </div>                             
                         </div>
+						
                         <div class="clear"></div>
                     </div>
                 </div>                          
