--- a/pauper.html
+++ b/pauper.html
@@ -285,24 +285,25 @@ Born by the desire to enclose in a box all other kind of works I do that have a 
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                                                                          
-                            <a href="laperla.html" rel="prev">
-                            La Perla<br>Nail Studio</a>    
+                        <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                    <li><a href="laperla.html">Brand identity</a></li> 
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
-                            </div> 
+                            </div>                  
                       </div>
                         <div class="nav-next">                                                  
-                            <a href="dali.html" rel="next">
-                             Osteria<br>Dalì
+                            <a href="work in progress.html" rel="next">
+                             Caffè Cavaliere
                             </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="dali.html">Brand identity</a></li>                        
+                                   <li><a href="work in progress.html">Brand identity</a></li>                        
                                 </ul>
                             </div>                             
                         </div>
