--- a/pugliamood.html
+++ b/pugliamood.html
@@ -149,18 +149,28 @@
 				
                 <div class="nav-links">                
                     <div class="content-570 center-relative">
-                        <div class="nav-previous">                            <a href="confindustria.html" rel="prev">
-                            Confindustria Albania
-                            </a>                     
+                          <div class="nav-previous">                            <a href="portfolio.html" rel="prev">
+                                Back to the<br><i>portfolio</i>
+                            </a>     
                             <div class="clear"></div>
                             <div class="cat-links">
-                                <ul>
-                                   <li><a href="confindustria.html">poster</a></li>                        
+                              <ul>
+                                    <li><a href="portfolio.html">Graphic</a></li>
+                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
                                 </ul>
-                            </div>  
+                            </div>                  
                       </div>
-                        <div class="nav-next">                           
-                        </div>
+                        <div class="nav-next">                                                                          
+                            <a href="dmtr.html" rel="next">
+                           Dmtr<br>Consulting</a>    
+                            <div class="clear"></div>
+                           <div class="cat-links">
+                                <ul>
+                                   <li><a href="dmtr.html">Business PLAN</a></li> 
+									<li><a href="dmtr.html">PITCH DECK</a></li> 
+                                </ul>
+                            </div> 
+                      </div>
                         <div class="clear"></div>
                     </div>
                 </div>                          
