skull+mod puglia mood

--- a/girl.html
+++ b/girl.html
@@ -209,13 +209,13 @@
                             </div>                  
                       </div>
                         <div class="nav-next">                                                  
-                            <a href="pugliamood.html" rel="next">
-                            Pugliamood
+                            <a href="skull.html" rel="next">
+                           Mexican<br>Skulls
                             </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="pugliamood.html">flyer</a></li>                        
+                                   <li><a href="skull.html">ILLUSTRATION</a></li>                        
                                 </ul>
                             </div>                             
                         </div>
@@ -248,8 +248,6 @@
 
             </footer>
    
-        </div>
-
         <!--Load JavaScript-->
         <script type="text/javascript" src="js/jquery.js"></script>			                                       
         <script type='text/javascript' src='js/imagesloaded.pkgd.js'></script>                
