--- a/portfolio_g.html
+++ b/portfolio_g.html
@@ -50,7 +50,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="work in progress.html">Resume</a>
+                                <a href="resume.html">Resume</a>
                             </li>   
                            
 							<li>
