--- a/girl.html
+++ b/girl.html
@@ -51,7 +51,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="work in progress.html">Resume</a>
+                                <a href="resume.html">Resume</a>
                             </li>   
                            
 							<li>
