--- a/mildly.html
+++ b/mildly.html
@@ -47,7 +47,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="work in progress.html">Resume</a>
+                               <a href="resume.html">Resume</a>
                             </li>   
                            
 							<li>
