--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="work in progress.html">Resume</a>
+                                 <a href="resume.html">Resume</a>
                             </li>   
                            
 							<li>
