--- a/scacchi.html
+++ b/scacchi.html
@@ -52,7 +52,7 @@
                             </li>   
 							   
 							<li>
-                                <a href="work in progress.html">Resume</a>
+                                <a href="resume.html">Resume</a>
                             </li>   
                            
 							<li>
