--- a/card.html
+++ b/card.html
@@ -257,7 +257,7 @@
                       </div>
                         <div class="nav-next">                                                  
                             <a href="girl.html" rel="next">
-                           Girls</a>    
+                           Enchanting Elegance</a>    
                             <div class="clear"></div>
                            <div class="cat-links">
                                 <ul>
