--- a/girl.html
+++ b/girl.html
@@ -102,7 +102,7 @@
                  <div class="full-portfolio-width ">
                            
                         </div>       
-					<h1 style="font-family:Playfair display, serif; font-weight:300; font-size:46px; line-height: 42px;;color:#171D20; text-align: center; margin-top:40px; ">Girls Illustrations </h1>
+					<h1 style="font-family:Playfair display, serif; font-weight:300; font-size:46px; line-height: 42px;;color:#171D20; text-align: center; margin-top:40px; ">Enchanting <em>Elegance</em> </h1>
 		  <p style="font-size:12px;letter-spacing: 5px; text-align: center;">PERSONAL PROJECT</p>
 		    <p class="center-text" style="margin-bottom:80px ">
                             Series of illustrations inspired by woman's beauty. </p>
@@ -177,7 +177,9 @@
 		
 	  
 					  <div class="one">
-                             <p style=" font-size:12px; line-height: 42px; margin-top:60px;text-align: center; line-height: normal ">The graphic project in this article is the result of a personal exercise.<br>Photos by <strong>Stefano Caiaffa.</strong> All right reserved.</p>
+                             <p style=" font-size:12px; line-height: 42px; margin-top:60px;text-align: center; line-height: normal ">The graphic project in this article is the result of a personal exercise.<br>Photos by  <a class="underline" href="https://www.flickr.com/photos/stefanocaiaffa/" >
+                           <strong>Stefano Caiaffa</strong>
+                            </a>. All right reserved.</p>
                  </div>
 					   <div class="clear"></div>
               </div>
