--- a/skull.html
+++ b/skull.html
@@ -268,6 +268,23 @@
                  </div>  
 		
                 </div>
+ <footer class="footer">
+			
+                <div class="footer-content content-1170 center-relative">	        
+                    <ul class="copyright-holder" >
+                        <li class="copyright-footer color" style="color:#fff;  font-size:12px; line-height: 22px;">
+                          © 2023 Annaclelia Rella <br>Park HTML Template by <a href="http://cocobasic.com" style="color:#fff;">CocoBasic</a>.   <br><br> All contents are property of Annaclelia Rella and their respective owners.<br>
+You cannot reproduce, distribute and/or adapt any part of the work without permission.           
+                        </li>
+						<li class="social-footer">                
+                            <a style="margin:20px; text-align: center" href="https://www.linkedin.com/in/annaclelia-rella-72248a10a/">Linkedin</a>
+							<a style="margin:20px; text-align: center"  href="https://www.behance.net/clelia_cle570b">Behance</a>
+							<a style="margin:20px; text-align: center"  href="https://www.instagram.com/mildlypoisonous/">Instagram</a>                
+                        </li>            
+                    </ul>
+                </div>
+            </footer>
+     
 
             </footer>
    
