--- a/resume.html
+++ b/resume.html
@@ -554,7 +554,7 @@ Trained on technical drawing aimed at product design as well as architectural pr
         </div> 
 	
 			 <div class="block center-relative center-text content-570">
-		  <div style="text-align: center"><a href="" class="button" style="color:#A77244; background-color:#F3E9E5"> download resume</a></div>
+		  <div style="text-align: center"><a href="annaclelia rella_resume 2023.pdf" class="button" style="color:#A77244; background-color:#F3E9E5"> download resume</a></div>
                  </div>  
 			
 			
