mod typo resume

--- a/resume.html
+++ b/resume.html
@@ -366,7 +366,7 @@ Trained on technical drawing aimed at product design as well as architectural pr
 		
 					<!-- SEZ. skill -->	
 	  <div class="page-content center-relative " style="background-color: #F3E9E6;">           <div class="one">
-                     <h2 style="font-family:Playfair display, serif; font-weight:300; font-size:46px;color:#A67244; text-align: center;"> <em>Technical</em> knoledge</h2>
+                     <h2 style="font-family:Playfair display, serif; font-weight:300; font-size:46px;color:#A67244; text-align: center;"> <em>Technical</em> knowledge</h2>
 		   <hr style="height:1px;border-width:0;color:#F2CB07;background-color:#F2CB07; width:100%;" >
             </div>
 				
