mod. testri | finale

--- a/card.html
+++ b/card.html
@@ -106,8 +106,8 @@
 					<h1 style="font-family:Playfair display, serif; font-weight:300; font-size:46px; line-height: 42px;;color:#171D20; text-align: center; margin-top:40px; ">Playing Cards </h1>
 		  <p style="font-size:12px;letter-spacing: 5px; text-align: center; ">ILLUSTRATIONS</p>
 		   <p class="center-text" style="margin-bottom:80px ">
-                            Series of three illustrations designed for a collection of a original air fresheners.<br>
-					Client:&nbsp;BelAir Fresheners</p>
+                            Series of three illustrations designed for a collection of original air fresheners.<br>
+					Client: BelAir Fresheners</p>
                 </div>
                 <div class="page-content-wrapper center-relative content-1170">
 					
