--- a/laperla.html
+++ b/laperla.html
@@ -272,7 +272,7 @@
 					  <div class="clear"></div>             
 					  
 					  <div class="one">
-                             <p style=" font-size:12px; line-height: 42px; margin-top:60px;text-align: center; line-height: normal ">The graphic project in this article is the result of a personal exercise. Any reference to facts or persons is purely coincidental.</p>
+                             <p style=" font-size:12px; line-height: 42px; margin-top:60px;text-align: center; line-height: normal ">The graphic project in this article is the result of a personal exercise. Any reference to actual fact, persons or businesses is purely coincidental.</p>
                  </div>
 					   <div class="clear"></div>
 					  
@@ -306,13 +306,13 @@
                             </div>                  
                       </div>
                         <div class="nav-next">                                                  
-                            <a href="work in progress.html" rel="next">
+                            <a href="pauper.html" rel="next">
                              Pauperformance
                             </a>                     
                             <div class="clear"></div>
                             <div class="cat-links">
                                 <ul>
-                                   <li><a href="work in progress.html">Brand identity</a></li>                        
+                                   <li><a href="pauper.html">Brand identity</a></li>                        
                                 </ul>
                             </div>                             
                         </div>
