--- a/pauper.html
+++ b/pauper.html
@@ -125,8 +125,8 @@
                     </div>
 						<div class="one_half last" style="margin-top:30px">
                           <p> The customer's desire was a logo that joins the letter "P" with the sketch of Gray Merchant of Asphodel, a character from the game.</p>
-                          <p>Starting with a stylization of the original illustration and taking advantage of the sack that the merchant brings with him, we managed to simulate the letter without losing the reference's recognition.</p>
-                          <p>As for Mildly Poisonous, in this case, the logo is different from the previous ones, thanks to a less geometric and more illustrative style. </p>
+                          <p>Starting with a stylization of the original illustration and taking advantage of the sack that the merchant carries with him, I managed to simulate the letter without losing the reference's recognition.</p>
+                          <p>Just like Mildly Poisonous, in this case, the logo is different from the previous ones, thanks to a less geometric and more illustrative style. </p>
                     </div>
 						  <div class="one_half  animate">
                         <img src="images/pauper_22.jpg " alt="pauperformance | logo">
