--- a/resume.html
+++ b/resume.html
@@ -155,7 +155,7 @@
 					  <hr style="height:1px;border-width:0;color:#F2CB07;background-color:#F2CB07; width:100%;" >
 					  
 				 <div class="one">
-                    	  <span style="background-color:#F2CB07; padding:6px;  font-size: 10pt; "><strong> 2022 - <em>present</em></strong> </span>
+                    	  <span style="background-color:#F2CB07; padding:6px;  font-size: 10pt; "><strong> 2022 - 2023</strong> </span>
                    </div>
 					  
 				 <div class="one_third" >
