--- a/work in progress.html
+++ b/work in progress.html
@@ -99,7 +99,7 @@
         
         	</h1>
 					 <p class="center-text" style="margin-bottom:30px ">
-                            In the meantime, find out more about me or nose around my other works. </p> 
+                            In the meantime, find out more about me or take a look at my other works. </p> 
 		 <div class="page-header-image center-relative">
                  
 		   <img src="images/workinprogress.jpg" alt="work in progress collage_ Clelia Rella" style="margin-top:30px">
