--- a/girl.html
+++ b/girl.html
@@ -102,10 +102,10 @@
                  <div class="full-portfolio-width ">
                            
                         </div>       
-					<h1 style="font-family:Playfair display, serif; font-weight:300; font-size:46px; line-height: 42px;;color:#171D20; text-align: center; margin-top:40px; ">Enchanting <em>Elegance</em> </h1>
+					<h1 style="font-family:Playfair display, serif; font-weight:300; font-size:46px; line-height: 42px;;color:#171D20; text-align: center; margin-top:40px; ">Enchanting <em>elegance</em> </h1>
 		  <p style="font-size:12px;letter-spacing: 5px; text-align: center;">PERSONAL PROJECT</p>
 		    <p class="center-text" style="margin-bottom:80px ">
-                            Series of illustrations inspired by woman's beauty. </p>
+                            Series of illustrations inspired by feminine beauty. </p>
                 </div>
                <!-- GIRL1 -->
 				<div class="page-content-wrapper center-relative content-1170">
@@ -177,9 +177,9 @@
 		
 	  
 					  <div class="one">
-                             <p style=" font-size:12px; line-height: 42px; margin-top:60px;text-align: center; line-height: normal ">The graphic project in this article is the result of a personal exercise.<br>Photos by  <a class="underline" href="https://www.flickr.com/photos/stefanocaiaffa/" >
+                             <p style=" font-size:12px; line-height: 42px; margin-top:60px;text-align: center; line-height: normal ">The graphic project in this article is the result of a private work.<br>Photos by  <a class="underline" href="https://www.flickr.com/photos/stefanocaiaffa/" >
                            <strong>Stefano Caiaffa</strong>
-                            </a>. All right reserved.</p>
+                            </a>. All rights reserved.</p>
                  </div>
 					   <div class="clear"></div>
               </div>
