--- a/mildly.html
+++ b/mildly.html
@@ -115,7 +115,7 @@
 					<!-- intro -->	
                   <div class="page-content" style="background-color: #F3E9E5;">
                         <div class="one_half " style="margin-top:30px">
-                          <p> Mildly Poisonous is <strong>my alter ego</strong>. Born by the desire of enclosing in a box all of the other works I do that have a different, dark soul. It's a place where I can experiment freely.</p>
+                          <p> Mildly Poisonous is <strong>my alter ego</strong>. Born of the desire of enclosing in a box all of the other works I do that have a different, dark soul. It's a place where I can experiment freely.</p>
                           <p>I’m really fascinated by the world of unreal and imaginative arts. For this reason I have chosen to design a logo as a tiny illustration rich of details, moving away from the comfort zone of geometric design.</p>
                           <p>The payoff “<em>Art addict anonymous</em>”  acts as a sort of "call for artists", inviting them to collaborate to create something new and unique. </p>
                     </div>
