--- a/pugliamood.html
+++ b/pugliamood.html
@@ -122,7 +122,7 @@
 					
 				  
 					  <div class="one">
-                             <p style=" font-size:12px; line-height: 42px; margin-top:60px;text-align: center; line-height: normal ">The graphic project in this article is the result of a work done during my job at <strong>Promostudio 360</strong>. All right reserved.</p>
+                             <p style=" font-size:12px; line-height: 42px; margin-top:60px;text-align: center; line-height: normal ">The graphic project in this article is the result of a work done during my job at <strong>Promostudio 360</strong>. All rights reserved.</p>
                  </div>
 					   <div class="clear"></div>
 			  </div>
