--- a/skull.html
+++ b/skull.html
@@ -105,8 +105,8 @@
 					<h1 style="font-family:Playfair display, serif; font-weight:300; font-size:46px; line-height: 42px;;color:#171D20; text-align: center; margin-top:40px; ">Mexican Skulls</h1>
 		  <p style="font-size:12px;letter-spacing: 5px; text-align: center;">ILLUSTRATION</p>
 					<p class="center-text" >
-                            Series of three illustrations designed for a collection of a original air fresheners.<br>
-					Client:&nbsp;BelAir Fresheners</p>
+                            Series of three illustrations designed for a collection of original air fresheners.<br>
+					Client: BelAir Fresheners</p>
                 </div>
                <!-- SKULL1 -->
 				<div class="page-content-wrapper center-relative content-1170">
