--- a/palazzo bellocchi.html
+++ b/palazzo bellocchi.html
@@ -126,7 +126,7 @@
 					  <div class="one_half last" >
                           <p>The mansion holds the history of two generations, two cultures linked to artistic, aesthetic and culinary estri. </p>
                             <p>The commissioner's request was to put a face on the 100-year history of what the heir Bruno Bellocchi calls a "beautiful family."</p>
-							 <p>The monogram characterizing the logo was born from reading the tale of righteous men and loving women and being inspired by the family emblems. The letters&nbsp; B and a P close together, reminiscent of the embrace, the womb, <em>the dwelling place</em>.
+							 <p>The monogram characterizing the logo was born from reading the tale of righteous men and loving women and being inspired by the family emblems. The letters  B and P close together, reminiscent of the embrace, the womb, <em>the dwelling place</em>.
 					        </p>
                         </div>
 						
