aggiornamento footer + cv

--- a/dmtr.html
+++ b/dmtr.html
@@ -209,7 +209,8 @@
                             <div class="cat-links">
                               <ul>
                                     <li><a href="portfolio.html">Graphic</a></li>
-                                    <li><a href="portfolio.html">ILLUSTRATION</a></li>                               
+                                    <li><a href="portfolio.html">ILLUSTRATION</a>
+								  </li>                               
                                 </ul>
                             </div>                  
                       </div>
@@ -261,7 +262,8 @@ You cannot reproduce, distribute and/or adapt any part of the work without permi
 						<li class="social-footer">                
                             <a style="margin:20px; text-align: center" href="https://www.linkedin.com/in/annaclelia-rella-72248a10a/">Linkedin</a>
 							<a style="margin:20px; text-align: center"  href="https://www.behance.net/clelia_cle570b">Behance</a>
-							<a style="margin:20px; text-align: center"  href="https://www.instagram.com/mildlypoisonous/">Instagram</a>                
+							<a style="margin:20px; text-align: center"  href="https://www.instagram.com/mildlypoisonous/">Instagram</a> 
+							<a style="margin:20px; text-align: center"  href="https://99designs.nl/profiles/2640678">99Design</a> 
                         </li>            
                     </ul>
                 </div>
