--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
                             </p>
                       </div>
                         <div class="one_half last">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96193.96809635567!2d16.799679354511852!3d41.11134784601757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1347e8f8f3078d6f%3A0x87254066a3908e1!2sBari%20BA!5e0!3m2!1sit!2sit!4v1687690746105!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                    
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77979.6656569773!2d4.821560856330651!3d52.35474184377406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c63fb5949a7755%3A0x6600fd4cb7c0af8d!2sAmsterdam!5e0!3m2!1sit!2snl!4v1694543541796!5m2!1sit!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                            
                         </div>
                         <div class="clear"></div>
                     </div>
@@ -153,7 +153,8 @@ You cannot reproduce, distribute and/or adapt any part of the work without permi
 						<li class="social-footer">                
                             <a style="margin:20px; text-align: center" href="https://www.linkedin.com/in/annaclelia-rella-72248a10a/">Linkedin</a>
 							<a style="margin:20px; text-align: center"  href="https://www.behance.net/clelia_cle570b">Behance</a>
-							<a style="margin:20px; text-align: center"  href="https://www.instagram.com/mildlypoisonous/">Instagram</a>                
+							<a style="margin:20px; text-align: center"  href="https://www.instagram.com/mildlypoisonous/">Instagram</a> 
+							<a style="margin:20px; text-align: center"  href="https://99designs.nl/profiles/2640678">99Design</a> 
                         </li>            
                     </ul>
                 </div>
