ballet bun_aggiornamento

--- a/mildly2.html
+++ b/mildly2.html
@@ -183,7 +183,17 @@
                             </div>                  
                       </div>
                          
-						
+						 <div class="nav-next">                                                  
+                            <a href="balletbun.html" rel="next">
+                           Ballet Bun<br>Poster
+                            </a>                     
+                            <div class="clear"></div>
+                            <div class="cat-links">
+                                <ul>
+                                   <li><a href="balletbun.html">ILLUSTRATION</a></li>                        
+                                </ul>
+                            </div>                             
+                        </div>
                         <div class="clear"></div>
                     </div>
                 </div>                          
