--- a/resume.html
+++ b/resume.html
@@ -128,7 +128,7 @@
 				<!-- intro -->	
                   <div class="page-content" style="background-color: #F3E9E6; border: solid 1px #F2CB07; ">
                    <div class="one_third">
-                     <p> Bari, Italy<br>
+                     <p> Amsterdam, The Netherlands<br>
 						 November 28th, 1993</p>
 					 <hr style="height:1px;border-width:0;color:#F2CB07;background-color:#F2CB07; width:100%;" > 
 					   <p> rellannac@gmail.com<br>
